[tool.poetry]
name = "python-driver-docs"
version = "0.1.0"
description = "ScyllaDB Python Driver Docs"
authors = ["Python Driver Contributors"]

[tool.poetry.dependencies]
eventlet = "0.25.2"
futures = "2.2.0"
geomet = "0.1.2"
gevent = "20.12.1"
gremlinpython = "3.4.7"
python = "^3.7"
pyyaml = "6.0"
pygments = "2.2.0"
recommonmark = "0.7.1"
sphinx-autobuild = "2021.3.14"
sphinx-sitemap = "2.1.0"
sphinx-scylladb-theme = "~1.2.1"
sphinx-multiversion-scylla = "~0.2.11"
Sphinx = "4.3.2"
scales = "1.0.9"
six = "1.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
